--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
       android:name=".MainApplication"
@@ -15,7 +15,7 @@
       android:supportsRtl="true">
       <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAI4-0GeifYIRCDpBIGJwfhSv5yPH2cmD0"/>
+            android:value="AIzaSyDG9Ta3y6btr1zS4WzY4ggUdDJbr8xaErY"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
