--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-mmkv": "^3.3.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0",
     "redux-saga": "^1.3.0",
     "yup": "^1.6.1"
@@ -46,6 +46,7 @@
     "@react-native/typescript-config": "0.80.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
