--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.60.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.24.10",
     "react-native-mmkv": "^3.3.0",
     "react-native-safe-area-context": "^5.5.2",
