--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "expo-linking": "^7.1.7",
     "react": "19.1.0",
     "react-hook-form": "^7.60.0",
     "react-native": "0.80.1",
@@ -49,14 +50,20 @@
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
-    "@types/jest": "^29.5.13",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.2",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-jest": "^30.0.5",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
+    "jest-expo": "^53.0.9",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.1.0",
+    "react-test-renderer": "^19.1.0",
+    "ts-jest": "^29.4.1",
     "typescript": "5.0.4"
   },
   "engines": {
